# bookscrape

./: .gitignore  README.md  constants.py  goodreads.py  hugo_nebula.json  meta.py  pyproject.toml  run.py  utils.py
bookscrape/: __init__.py  constants.py  goodreads.py  hn.py  sheets.py  utils.py
bookscrape/data/: __init__.py  hobbit.json  tolkien.json
bookscrape/scrape/: __init__.py  goodreads.py  hn.py  stats.py  toplists.py  utils.py
bookscrape/scrape/goodreads/: __init__.py  data.py  scrapers.py  utils.py
bookscrape/scrape/provider/: __init__.py  amazon.py  barnes_and_noble.py
bookscrape/scrape/provider/goodreads/: __init__.py  data.py  scrapers.py  utils.py
bookscrape/utils/: __init__.py  check_type.py
input/: hugo_nebula.json
meta/: __init__.py  hn.py
output/: dump_20211031_003530.json  hugo_nebula.txt  other_authors_dump_20211031_021004.json
scrape/: __init__.py  goodreads.py  hn.py  hugo_nebula.json
