[tool.poetry]
name = "wranking"
version = "0.1.0"
description = "Writers' ranking based on data scraped from various book websites."
authors = ["z33k <zeek@int.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
pandas = "^1.3.4"
contexttimer = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
